--- a/main.scss
+++ b/main.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
-// Import a Google Font
+// Google Font - not used for performance optimizations
 // @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 
-//pallette
+//THEME: color pallette
 $white: white;
 
 // Update Bulma's global variables
@@ -15,26 +15,30 @@ $link: #365ead;
 $widescreen-enabled: true;
 $fullhd-enabled: true;
 
-// Update some of Bulma's component variables
-// $body-background-color: $beige-lighter;
-// $control-border-width: 2px;
-// $input-border-color: transparent;
-// $input-shadow: none;
+// Import only what you need from Bulma (TODO: customize list)
+@import "./node_modules/bulma/sass/utilities/_all";
+@import "./node_modules/bulma/sass/base/_all";
+@import "./node_modules/bulma/sass/elements/_all";
+@import "./node_modules/bulma/sass/components/_all";
+@import "./node_modules/bulma/sass/grid/_all";
+@import "./node_modules/bulma/sass/layout/_all";
 
-// Import only what you need from Bulma
-@import "node_modules/bulma/sass/utilities/_all.sass";
-@import "node_modules/bulma/sass/base/_all.sass";
-@import "node_modules/bulma/sass/elements/button.sass";
-@import "node_modules/bulma/sass/elements/container.sass";
-@import "node_modules/bulma/sass/elements/form.sass";
-@import "node_modules/bulma/sass/elements/title.sass";
-@import "node_modules/bulma/sass/components/navbar.sass";
-@import "node_modules/bulma/sass/layout/hero.sass";
-@import "node_modules/bulma/sass/layout/section.sass";
+/* main styles */
+p {
+  margin: 0.75rem 0;
+}
 
-.profile-pic {
-  border-radius: 50%;
-  border: 4px solid #9bb3e3;
+.container {
+  margin: 0 auto;
+}
+
+.profile-pic-container {
+  text-align: center;
+  img {
+    width: 350px;
+    border-radius: 50%;
+    border: 4px solid #9bb3e3;
+  }
 }
 content,
 section {
@@ -59,7 +63,7 @@ section {
 }
 
 .main-footer {
-  height: 4rem;
+  height: 2rem;
   background-color: $grey-lighter;
   display: flex;
   justify-content: center;
@@ -74,4 +78,17 @@ section#projects {
   background-color: #8dd2e2;
 }
 
-/**/
+section#contact {
+  background-color: $grey-dark;
+}
+
+/* components */
+.bullet-point {
+  margin: 0.5rem 0;
+  img {
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.5rem;
+    vertical-align: text-top;
+  }
+}
