--- a/main.scss
+++ b/main.scss
@@ -1,19 +1,22 @@
 @charset "utf-8";
 
 // Google Font - not used for performance optimizations
-// @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
+@import url("https://fonts.googleapis.com/css?family=Merriweather:300,700");
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 
 //THEME: color pallette
 $white: white;
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
+$family-sans-serif: "Nunito", serif;
 $grey-dark: #575757;
 $grey-light: #8d949c;
+$grey-lighter: #b8bfc7;
 $primary: #a5bce9;
-$link: #365ead;
+$link: $grey-light;
 $widescreen-enabled: true;
 $fullhd-enabled: true;
+//$turquoise
 
 // Import only what you need from Bulma (TODO: customize list)
 @import "./node_modules/bulma/sass/utilities/_all";
@@ -23,7 +26,19 @@ $fullhd-enabled: true;
 @import "./node_modules/bulma/sass/grid/_all";
 @import "./node_modules/bulma/sass/layout/_all";
 
+input,
+textarea {
+  border: 0 !important;
+  border-radius: 0 !important;
+}
+
 /* main styles */
+
+.title-font {
+  font-family: "Merriweather", sans-serif;
+  font-weight: 700;
+}
+
 p {
   margin: 0.75rem 0;
 }
@@ -37,7 +52,7 @@ p {
   img {
     width: 350px;
     border-radius: 50%;
-    border: 4px solid #9bb3e3;
+    border: 4px solid $white-ter;
   }
 }
 content,
@@ -50,12 +65,13 @@ section {
   width: 100%;
   //   max-height: calc(100vh - 152px);
   padding: 2rem;
-  color: $white;
 }
 
 .page--dark {
+  color: $white;
   &__link {
     color: $link;
+    text-decoration: underline;
   }
   &__link:hover {
     color: lighten($link, 8%);
@@ -63,15 +79,25 @@ section {
 }
 
 .main-footer {
-  height: 2rem;
+  padding: 3rem;
+  color: $grey-light;
   background-color: $grey-lighter;
   display: flex;
   justify-content: center;
   align-items: center;
+  a {
+    color: $grey-dark;
+  }
+}
+
+.section-title {
+  color: $primary;
+  font-size: 1.5rem;
+  margin: 2rem 0;
 }
 
 section#hero {
-  background-color: #809fdf;
+  background-color: $white;
 }
 
 section#projects {
@@ -84,11 +110,21 @@ section#contact {
 
 /* components */
 .bullet-point {
-  margin: 0.5rem 0;
-  img {
-    height: 1rem;
-    width: 1rem;
-    margin-right: 0.5rem;
-    vertical-align: text-top;
+  margin: 1rem 0;
+  dt {
+    font-weight: bold;
+    font-size: 1.2rem;
+    img {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 0.2rem;
+      vertical-align: middle;
+    }
+  }
+  dd {
+    margin-left: 2.5rem;
+    color: $grey-lighter;
   }
 }
+
+/* utilities */
