--- a/src/main.scss
+++ b/src/main.scss
@@ -28,7 +28,7 @@ $beige: #f8f8f8;
 $red-light: #ef5753;
 $green-light: #51d88a;
 
-$blue: #3490dc;
+$blue: #0088f7;
 $blue-dark: #34495e;
 $blue-light: #6cb2eb;
 
@@ -56,9 +56,9 @@ a {
 
 .hero-links {
   a {
-    color: $blue-dark;
+    color: $blue;
     &:hover {
-      color: $grey;
+      color: $blue-light;
     }
   }
 }
